# AGILE

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_all.sh  setup_model.sh
.github/workflows/: ci.yml
app/: __init__.py  api.py  dashboard.py
app/core/: config.py
app/data/: generate.py
app/services/: infer.py
docs/: architecture.md  backlog.md  data.md  initiation.md  jira.md  jira_import.csv  metrics.json  project_report.md  report.md  scrum.md
tests/: conftest.py  test_data_and_model.py
