[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agile-spm-ml"
version = "0.1.0"
description = "Agile ML project for Strategic Portfolio Management using Scrum"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Team Agile SPM ML" }
]
dependencies = [
  "pydantic>=2.7",
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.5",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "python-dotenv>=1.0",
  "joblib>=1.4",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "plotly>=5.22",
  "streamlit>=1.37",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "black>=24.8",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

